--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,41 @@
+appnope==0.1.0
+bleach==1.5.0
+boto==2.48.0
+bz2file==0.98
+certifi==2017.7.27.1
+chardet==3.0.4
+cycler==0.10.0
+decorator==4.1.2
+gensim==2.3.0
+html5lib==0.9999999
+idna==2.6
+ipython==6.1.0
+ipython-genutils==0.2.0
+jedi==0.10.2
 JPype1==0.6.2
 konlpy==0.4.4
+Markdown==2.6.9
+matplotlib==2.0.2
+mecab-python===0.996-ko-0.9.0
+numpy==1.13.1
+pandas==0.20.3
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+protobuf==3.4.0
+ptyprocess==0.5.2
+Pygments==2.2.0
+pyparsing==2.2.0
+python-dateutil==2.6.1
+pytz==2017.2
+requests==2.18.4
+scipy==0.19.1
+simplegeneric==0.8.1
+six==1.10.0
+smart-open==1.5.3
+tensorflow==1.3.0
+tensorflow-tensorboard==0.1.4
+traitlets==4.3.2
+urllib3==1.22
+wcwidth==0.1.7
+Werkzeug==0.12.2
